En la vista del tablero, se añade html que muestra la palabra en guiones

--- a/src/app/tablero/tablero.component.html
+++ b/src/app/tablero/tablero.component.html
@@ -1,1 +1,9 @@
-<p>tablero works!</p>
+<div class="card">
+    <div class="card-body">
+        <p>
+            @for (palabra of palabraUsuario; track $index) {
+                {{palabra}}
+            }
+        </p>
+    </div>
+</div>
