añadimos un formulario basico para que ingrese una letra y lo envie.

--- a/src/app/tablero/tablero.component.html
+++ b/src/app/tablero/tablero.component.html
@@ -7,3 +7,20 @@
         </p>
     </div>
 </div>
+
+<div class="card">
+    <div class="card-body">
+        <form>
+        <div>
+            <label for="" class="form-label">
+                Ingrese letra: 
+            </label>
+            <input type="text" class="form-control" placeholder="letra">
+        </div>
+        <button class="btn btn-primary mt-2">
+            Enviar
+        </button>
+    </form>
+
+    </div>
+</div>
