--- a/src/app/tablero/tablero.component.html
+++ b/src/app/tablero/tablero.component.html
@@ -10,7 +10,7 @@
 
 <div class="card">
     <div class="card-body">
-        <form>
+        <form (ngSubmit)="ingresarLetra()">
         <div>
             <label for="" class="form-label">
                 Ingrese letra: 
