Añadimos un variable que almacenara la letra que el usuario ingrese. Ademas, esta variable lo sincronizamos con el formulario

--- a/src/app/tablero/tablero.component.html
+++ b/src/app/tablero/tablero.component.html
@@ -15,7 +15,7 @@
             <label for="" class="form-label">
                 Ingrese letra: 
             </label>
-            <input type="text" class="form-control" placeholder="letra">
+            <input type="text" class="form-control" placeholder="letra" name="letraUsuario"  [(ngModel)]="letraUsuario">
         </div>
         <button class="btn btn-primary mt-2">
             Enviar
