--- a/src/app/tablero/tablero.component.html
+++ b/src/app/tablero/tablero.component.html
@@ -15,9 +15,9 @@
             <label for="" class="form-label">
                 Ingrese letra: 
             </label>
-            <input type="text" class="form-control" placeholder="letra" name="letraUsuario"  [(ngModel)]="letraUsuario">
+            <input type="text" class="form-control" placeholder="letra" name="letraUsuario"  [(ngModel)]="letraUsuario" [disabled]="juegoTerminado">
         </div>
-        <button class="btn btn-primary mt-2">
+        <button class="btn btn-primary mt-2" [disabled]="juegoTerminado">
             Enviar
         </button>
     </form>
