Mostramos la imagen en la pagina

--- a/src/app/imagen-ahorcado/imagen-ahorcado.component.html
+++ b/src/app/imagen-ahorcado/imagen-ahorcado.component.html
@@ -1,1 +1,5 @@
-<p>imagen-ahorcado works!</p>
+<div class="card">
+    <div class="card-body">
+        <img [src]="urlImagen" alt="Image-ahorcado" width="125" height="167">
+    </div>
+</div>
