Se cambia la manera de obtener la imagen para la imagen en la pagina cambie de acuerdo a los intentos

--- a/src/app/imagen-ahorcado/imagen-ahorcado.component.html
+++ b/src/app/imagen-ahorcado/imagen-ahorcado.component.html
@@ -1,5 +1,5 @@
 <div class="card">
     <div class="card-body">
-        <img [src]="urlImagen" alt="Image-ahorcado" width="125" height="167">
+        <img [src]="servicioImg.imagenes[servicioImg.posActual]" alt="Image-ahorcado" width="125" height="167">
     </div>
 </div>
