Centramos nuestros componentes en la pagian web

--- a/src/app/imagen-ahorcado/imagen-ahorcado.component.html
+++ b/src/app/imagen-ahorcado/imagen-ahorcado.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card-body">
+    <div class="card-body d-flex flex-column justify-content-center align-items-center">
         <img [src]="servicioImg.imagenes[servicioImg.posActual]" alt="Image-ahorcado" width="125" height="167">
     </div>
 </div>
