--- a/src/app/tablero/tablero.component.html
+++ b/src/app/tablero/tablero.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card-body">
+    <div class="card-body d-flex flex-column justify-content-center align-items-center">
         <p>
             @for (palabra of palabraUsuario; track $index) {
                 {{palabra}}
@@ -9,7 +9,7 @@
 </div>
 
 <div class="card">
-    <div class="card-body">
+    <div class="card-body d-flex flex-column justify-content-center align-items-center">
         <form (ngSubmit)="ingresarLetra()">
         <div>
             <label for="" class="form-label">
@@ -21,6 +21,5 @@
             Enviar
         </button>
     </form>
-
     </div>
 </div>
