--- a/src/app/tablero/tablero.component.html
+++ b/src/app/tablero/tablero.component.html
@@ -23,3 +23,11 @@
     </form>
     </div>
 </div>
+
+<div class="card">
+    <div class="card-body d-flex flex-column justify-content-center align-items-center">
+        <p>
+            Intentos restantes: {{intentos}}
+        </p>
+    </div>
+</div>
