--- a/src/app/tablero/tablero.component.html
+++ b/src/app/tablero/tablero.component.html
@@ -9,18 +9,18 @@
 </div>
 
 <div class="card">
-    <div class="card-body d-flex flex-column justify-content-center align-items-center">
-        <form (ngSubmit)="ingresarLetra()">
-        <div>
-            <label for="" class="form-label">
-                Ingrese letra: 
-            </label>
-            <input type="text" class="form-control" placeholder="letra" name="letraUsuario"  [(ngModel)]="letraUsuario" [disabled]="juegoTerminado">
-        </div>
-        <button class="btn btn-primary mt-2" [disabled]="juegoTerminado">
-            Enviar
-        </button>
-    </form>
+    <div class="card-body d-flex justify-content-center align-items-center">
+        <form (ngSubmit)="ingresarLetra()" class="d-flex align-items-center">
+            <div class="d-flex align-items-center me-2">
+                <label for="letraUsuario" class="form-label me-2">
+                    Ingrese letra: 
+                </label>
+                <input type="text" id="letraUsuario" class="form-control" placeholder="letra" name="letraUsuario" [(ngModel)]="letraUsuario" [disabled]="juegoTerminado">
+            </div>
+            <button class="btn btn-primary me-2" [disabled]="juegoTerminado">
+                Enviar
+            </button>
+        </form>
     </div>
 </div>
 
