--- a/src/app/tablero/tablero.component.html
+++ b/src/app/tablero/tablero.component.html
@@ -1,4 +1,5 @@
 <div class="card">
+
     <div class="card-body d-flex flex-column justify-content-center align-items-center">
         <p>
             @for (palabra of palabraUsuario; track $index) {
@@ -6,9 +7,7 @@
             }
         </p>
     </div>
-</div>
 
-<div class="card">
     <div class="card-body d-flex justify-content-center align-items-center">
         <form (ngSubmit)="ingresarLetra()" class="d-flex align-items-center">
             <div class="d-flex align-items-center me-2">
@@ -22,9 +21,7 @@
             </button>
         </form>
     </div>
-</div>
 
-<div class="card">
     <div class="card-body d-flex flex-column justify-content-center align-items-center">
         @if (intentos>0) {
             @if (juegoTerminado) {
@@ -40,4 +37,11 @@
             </div>
         }
     </div>
+
+    <div class="card-body d-flex justify-content-center align-items-center">
+        <button class="btn btn-success" (click)="reiniciarJuego()">
+            Reiniciar Juego
+        </button>
+    </div>
+
 </div>
